--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,26 @@
           <p class="subtitle">An independent analysis of prediction market accuracy</p>
         </div>
       </section>
-      <section class="section">
-        <p><a href="manifold">Manifold Markets</a></p>
+      <section class="section is-small">
+        <article class="message is-link">
+          <div class="message-body">This site is a work in progress. Thank you for your patience.</div>
+        </article>
+      </section>
+      <section class="section is-medium">
+        <div class="columns is-centered">
+          <div class="column is-3">
+            <a href="manifold">
+              <div class="box has-text-centered has-text-link">
+                <p>Manifold Markets</p>
+              </div>
+            </a>
+          </div>
+          <div class="column is-3">
+            <div class="box has-text-centered">
+              <p>Additional sites coming soon!</p>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
     <footer class="footer">
