better hide warning

--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -33,7 +33,7 @@
         </div>
       </section>
       <section class="section">
-        <article class="message is-danger is-hidden-tablet-only is-hidden-desktop-only is-hidden-widescreen-only">
+        <article class="message is-danger is-hidden-tablet">
           <div class="message-body">Warning: This site is not optimized for mobile viewing.</div>
         </article>
         <div class="box">
