--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -24,7 +24,9 @@
               <nav class="breadcrumb is-right">
                 <ul>
                   <li><a href="/">Home</a></li>
-                  <li><a href="/">About</a></li>
+                  <li><a href="#">Docs</a></li>
+                  <li><a href="https://github.com/wasabipesto/calibration-site">Source</a></li>
+                  <li><a href="/db">Cache</a></li>
                   <li class="is-active"><a href="/manifold">Manifold</a></li>
                 </ul>
               </nav>
@@ -472,7 +474,6 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p>Calibration City made with ♡ by <a href="https://wasabipesto.com">wasabipesto</a>.</p>
-        <p>You can download the cached database <a href="/db">here</a>.</p>
       </div>
     </footer>
   </body>
