fix close time bug

--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -65,7 +65,7 @@
                 <div class="control is-expanded">
                   <div class="select is-fullwidth">
                     <select name="xbin_size" id="xbin_size">
-                      <option value="0" selected>Default Size</option>
+                      <option value="0" selected>Auto</option>
                       <option value="0.005">0.5%</option>
                       <option value="0.010">1.0%</option>
                       <option value="0.015">1.5%</option>
@@ -434,7 +434,7 @@
           {
             x: [0, 1],
             y: [0, 1],
-            name: 'Perfect',
+            name: 'Reference',
             type: 'lines',
             mode: 'line',
             line: {
