default weight and datapoint size as num traders

--- a/templates/manifold.html
+++ b/templates/manifold.html
@@ -86,10 +86,10 @@
                 <div class="control is-expanded">
                   <div class="select is-fullwidth">
                     <select name="ybin_modifier" id="ybin_modifier">
-                      <option value="none" selected>No Weight</option>
+                      <option value="none">No Weight</option>
                       <option value="volume">Weight by Volume</option>
                       <option value="payout">Weight by Payout</option>
-                      <option value="num_traders">Weight by Traders</option>
+                      <option value="num_traders" selected>Weight by Traders</option>
                     </select>
                   </div>
                 </div>
@@ -99,11 +99,11 @@
                 <div class="control is-expanded">
                   <div class="select is-fullwidth">
                     <select name="point_modifier" id="point_modifier">
-                      <option value="none" selected>Default Size</option>
+                      <option value="none">Equal Size</option>
                       <option value="count">Scale by Number of Markets</option>
                       <option value="volume">Scale by Total Volume</option>
                       <option value="payout">Scale by Total Payout</option>
-                      <option value="num_traders">Scale by Total Traders</option>
+                      <option value="num_traders" selected>Scale by Total Traders</option>
                     </select>
                   </div>
                 </div>
