--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,10 @@
       </section>
       <section class="section is-small">
         <article class="message is-link">
-          <div class="message-body">This site is a work in progress. Thank you for your patience.</div>
+          <div class="message-body">
+            This site has been rewritten! You can find version 2.0 at
+            <a href="https://calibration.city">https://calibration.city</a>
+          </div>
         </article>
       </section>
       <section class="section is-medium">
@@ -27,11 +30,6 @@
                 <p>Manifold Markets</p>
               </div>
             </a>
-          </div>
-          <div class="column is-3">
-            <div class="box has-text-centered">
-              <p>Additional sites coming soon!</p>
-            </div>
           </div>
         </div>
       </section>
